--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
-    <string name="app_name">Proyecto Progra 3</string>
+    <string name="app_name">Don Nico App</string>
+    <string name="title_code">Código</string>
+    <string name="title_contraseña">Contraseña</string>
 </resources>
