--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="title_code">Código</string>
     <string name="title_contraseña">Contraseña</string>
     <string name="title_activity_contactos">contactos</string>
+    <string name="title_activity_maps">Map</string>
 </resources>
